# pokedo

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: API.md  ARCHITECTURE.md  CONTRIBUTING.md  EV_IV_SPEC.md  GETTING_STARTED.md  MULTIPLAYER.md  ROADMAP_ACTIONS.md  SYNC_CLIENT.md  TROUBLESHOOTING.md
pokedo/: __init__.py  __main__.py  server.py
pokedo/cli/: __init__.py  app.py
pokedo/cli/commands/: battle.py  leaderboard.py  pokemon.py  profile.py  stats.py  tasks.py  wellbeing.py
pokedo/cli/ui/: __init__.py  displays.py  menus.py
pokedo/core/: __init__.py  auth.py  battle.py  moves.py  pokemon.py  rewards.py  task.py  trainer.py  wellbeing.py
pokedo/data/: __init__.py  database.py  pokeapi.py  server_models.py  sync.py
pokedo/tui/: __init__.py  app.py
pokedo/tui/screens/: __init__.py  tasks.py
pokedo/tui/styles/: __init__.py  base.tcss
pokedo/tui/widgets/: __init__.py  common.py  encounter.py  task_forms.py  task_list.py
pokedo/utils/: config.py  helpers.py  sprites.py
tests/: __init__.py  conftest.py  test_auth.py  test_battle.py  test_cli_pokedex.py  test_cli_profile.py  test_cli_sprite.py  test_cli_stats.py  test_database.py  test_helpers.py  test_moves.py  test_pokemon.py  test_profile_scoping.py  test_rewards.py  test_server.py  test_sprites.py  test_sync.py  test_task.py  test_trainer.py  test_trainer_class.py  test_tui.py  test_wellbeing.py
tools/: cli_example.py
