[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pokedo"
version = "0.1.0"
description = "A Pokemon-themed CLI task manager and wellbeing tracker"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "n3u" }
]
dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
    "pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
pokedo = "pokedo.cli.app:app"

[tool.hatch.build.targets.wheel]
packages = ["pokedo"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
