[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pokedo"
version = "0.2.0"
description = "A Pokemon-themed CLI task manager and wellbeing tracker"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "n3u" }
]
dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
    "pillow>=10.0.0",
    "textual>=0.70.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.1",
    "python-multipart>=0.0.6",
    "requests>=2.0.0",
    "sqlmodel>=0.0.21",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=24.0.0",
    "ruff>=0.6.0",
    "isort>=5.13.0",
    "sqlalchemy>=2.0.0",
]

[project.scripts]
pokedo = "pokedo.cli.app:app"

[tool.hatch.build.targets.wheel]
packages = ["pokedo"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore::sqlalchemy.exc.SAWarning",
]

[tool.black]
line-length = 100
target-version = ["py310"]
preview = true

[tool.isort]
profile = "black"
line_length = 100
combine_as_imports = true
known_first_party = ["pokedo"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["pokedo", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "B", "UP", "RUF"]
ignore = ["E203", "E501", "B008"]

[tool.ruff.lint.isort]
known-first-party = ["pokedo"]

[tool.ruff.format]
preview = true
